Fixed problem with menu being wrong colour when it isn’t closed and screen is widened.

--- a/docs/guide.scss
+++ b/docs/guide.scss
@@ -168,3 +168,14 @@ body
 {
 	background-image: url('desktop.svg');
 }
+
+@media screen and (min-width: 480px)
+{
+	.navbar
+	{
+		&-collapse.in, &-collapse.collapsing
+		{
+			background-color: #223B70;
+		}
+	}
+}
